tests/yuan/lexer/errors/unterminated_strings.yu
// Yuan 词法分析错误测试 - 未终止的字符串
// 测试各种未终止字符串的错误处理

// 未终止的普通字符串
var str1 = "hello world

// 未终止的包含转义序列的字符串
var str2 = "hello\nworld

// 未终止的包含 Unicode 的字符串
var str3 = "你好世界

// 未终止的原始字符串
var raw1 = r"hello world

// 未终止的带分隔符的原始字符串
var raw2 = r#"hello world

// 未终止的多行字符串
var multiline1 = """
hello
world

// 未终止的字符字面量
var char1 = 'a

// 未终止的转义字符字面量
var char2 = '\n

// 未终止的 Unicode 字符字面量
var char3 = '\u{41

// 文件结尾的未终止字符串
var final_str = "this string is never closed